--- a/evidence/nextsteps.html
+++ b/evidence/nextsteps.html
@@ -32,5 +32,6 @@
     
 <p>The Caesar Cipher doesn't encrypt spaces so the lengths of words can easily be seen even after encryption.  I think making a change to the cipher so spaces are also encrypted would be a good idea.</p>
 
+<p>I discovered that the 'onchange' event only fires for the spin button after the user clicks somewhere else if they type a value in.  This works okay but it's a little annoying and would be good to fix.</p>
 </body>
 </html>
