--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="navigation">
         <ul>
             <li>
-                <a href="index.html"><img class="navimage" width="90px" src="images/mainicon.png"></a>
+                <a href="index.html"><img class="navimage" width="90px" src="images/mainicon.jpg"></a>
             </li>
             <li>
                 <a class="navlink" href="evidence/index.html">Evidence</a>
