--- a/evidence/index.html
+++ b/evidence/index.html
@@ -39,6 +39,7 @@
       <div><a href="codesforstring.html">Getting codes for an entire string</a></div>  
       <div><a href="characterfromcode.html">Getting a character from a code</a></div> 
       <div><a href="caesarstring.html">Caesar Cipher a string</a></div> 
+      <div><a href="jstimer.html">Timers in javascript</a></div> 
     </div>
 
 </body>
