Added Quote of the Day

--- a/evidence/index.html
+++ b/evidence/index.html
@@ -40,6 +40,7 @@
       <div><a href="characterfromcode.html">Getting a character from a code</a></div> 
       <div><a href="caesarstring.html">Caesar Cipher a string</a></div> 
       <div><a href="jstimer.html">Timers in javascript</a></div> 
+      <div><a href="webservice.html">Calling a web service</a></div> 
     </div>
 
 </body>
