Added instructions page, added styles for info text, and changed links to buttons

--- a/evidence/myjourney.html
+++ b/evidence/myjourney.html
@@ -35,6 +35,13 @@
 <img width="50%" src="images/ClipboardBefore.png"><br/>
 <p>I decided that it would be better to make the message disappear after a certain amount of time.  To do this I had to look into running code on a timer in javascript.</p>
     
+<p>I thought it would be a good idea to help my testers and users out by providing a way to load the 'quote of the day' into the input box.  This meant testers / users didn't have to continuously type input text when they used the app.  I loaded the quote of the day by calling the 'They Said So' webservice using the Javascript 'Fetch' method.  The image below shows the form with the quote of the day loaded and the author shown in the 'messages' area.
+    </p>
+<img width="50%" src="images/qod.png"><br/>
+<p>
+Close to the end of my project, I did some more user testing by asking people who had never seen my app before to assess how easy it was to use.  In general the testers thought that the app was easy to use but a single user said they didn't understand what they were meant to do.  This feedback resulted in me adding a new dedicated step-by-step instruction page to the app that walked a new user through how to use the app, including screenshots of each stage.  This feedback helped by encouraging me to cater for all types of users, ranging from those who are experienced app / website users all the way to very inexperienced users.  The instructions page is shown below:
+</p>
+<img width="50%" src="images/instructions.png"><br/>
 
 </body>
 </html>
