--- a/evidence/index.html
+++ b/evidence/index.html
@@ -29,7 +29,7 @@
     For the Caesar Cipher app, I needed to use a few new techniques.  Each of these is listed below with a link to an evidence page.  Please use the 'View Source' in your browser to look at the code for each evidence page.
 
     <div class="flex-container">
-      <div><a href="myjourney.html">*Finding and fixing things</a></div>
+      <div><a href="myjourney.html">Finding and fixing things</a></div>
       <div><a href="nextsteps.html">Ideas to make the app better</a></div>
       <div><a href="overall-design.html">Overall design</a></div>
       <div><a href="icon-design.html">Icon design</a></div>
